# ip-cli-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: build.rs  main.rs
