[package]
name = "ip-cli"
version = "0.1.2"
edition = "2021"
authors = ["yinheli <me@yinheli.com>"]
license = "MIT"
repository = "https://github.com/yinheli/ip-cli-rs"
homepage = "https://github.com/yinheli/ip-cli-rs"
readme = "README.md"
description = "ip-cli for query ip location info"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "4"
ipdb = "0.1.4"
cli-table = "0.4"
lazy_static = "1"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
